data/all_generated_tests/raw_wast_tests/br_IncorrectBranchTargetResolution_98.wast
;; 9. **Fallback Label Branch Test**: Develop a test where a `br` instruction mistakenly targets a fallback label during execution within a sequence of conditionals and loops. Ensure that the branch differentiates and correctly targets a pre-defined, valid label instead.

(assert_invalid
  (module
    (func $fallback-label-branch
      (loop (if (block (br 1)))
        (i32.const 1)
      )
    )
  )
  "type mismatch"
)